Fix issue with blurry loaders

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -23,6 +23,7 @@ body {
   margin-top: -1px;
   position: relative;
   z-index: 102;
+  box-shadow: 0 0 3px 0 #D4D4D5;
 
   .header.item {
     flex: 1;
@@ -34,6 +35,13 @@ body {
       overflow: hidden;
       text-overflow: ellipsis;
     }
+  }
+}
+
+.ui.inverted.dimmer .ui.large.loader,
+.ui.large.loader {
+  &.slim {
+    font-size: 1em;
   }
 }
 
@@ -212,15 +220,45 @@ body {
   }
 }
 
-.expanded.area {
-  width: 100%;
-  height: 100%;
+.ui.area {
   margin: 0 !important;
   padding: 0 !important;
 
   display: flex;
-  flex-direction: column;
   flex-wrap: nowrap;
+
+  &.expanded {
+    width: 100%;
+    height: 100%;
+    &.layer {
+      position: absolute;
+      left: 0;
+      top: 0;
+    }
+  }
+
+  &.horizontal {
+    flex-direction: row;
+    &.reversed {
+      flex-direction: row-reverse;
+    }
+  }
+  &.vertical {
+    flex-direction: column;
+    &.reversed {
+      flex-direction: column-reverse;
+    }
+  }
+
+  &.left.aligned {
+    justify-content: flex-start;
+  }
+  &.right.aligned {
+    justify-content: flex-end;
+  }
+  &.center.aligned {
+    justify-content: center;
+  }
 
   & > .row {
     position: relative;
@@ -228,10 +266,26 @@ body {
     padding: 0 !important;
     flex-grow: 0 !important;
 
+    &.left.aligned {
+      text-align: left;
+    }
+    &.right.aligned {
+      text-align: right;
+    }
+    &.center.aligned {
+      text-align: center;
+    }
+
     &.expanded {
       flex-grow: 1 !important;
       align-self: stretch !important;
     }
+  }
+
+  .ui.inline.loader {
+    position: static;
+    display: inline-block;
+    transform: none;
   }
 }
 
@@ -279,6 +333,9 @@ textarea {
     width: 100%;
     height: 100%;
     cursor: move;
+
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
   }
 }
 
